--- a/_posts/2014-07-29-yc-13advice.md
+++ b/_posts/2014-07-29-yc-13advice.md
@@ -10,44 +10,43 @@ icon: file-o
 ---
 
 
-
-```◾ 好好挑选创业同伴（Pick good cofounders）
+<br /> <h4>◾ 好好挑选创业同伴（Pick good cofounders）</h4>
 
 联合创始人对于创业公司的意义，就好比地段之于不动产——除了位置，房屋的任何一部分你都好改变。创业的时候，你能轻而易举地更换思路，但更换联合创始人可就没这么简单了，而创业公司的成功，往往又是由创始人们一手建立的。所以，你必须好好挑选创业同伴。
 ◾ 快速上线（Launch fast）
 
 这倒不是为了让你的产品尽早入市，而是：如果你还没上线，那么你就不算真的入行。上线能教会你哪些才是市场真正需要的——也就是你真正该做的——在此之前你无论做什么，都只是在浪费时间。不论你上线的是什么产品，它的主要价值都在于产生了与顾客接触的理由。
-```◾ 进化自己的思路（Let your idea evolve）
+<br /> <h4>◾ 进化自己的思路（Let your idea evolve）</h4>
 
 这是快速上线的另一半价值所在。快快上线，然后迭代。把创业看作是完成某个绝妙 idea 的途径——这种思想大错特错——就想写散文一样，很多好 idea 都是在书写的过程中产生的。
-```◾ 懂用户（Understand your users）
+<br /> <h4>◾ 懂用户（Understand your users）</h4>
 
 你可以把创业产生的财富想作一个矩形——长是用户数，宽则是你改善其生活的程度。你最能掌控的是后者，而长的程度同时也仰赖于宽的程度。就像科学问题：最难的不是回答它们，而是发现它们——创业难在发掘什么才既符合用户需求又尚未面世。在这点上你参悟得越透，那么你的胜算就越高。这也是为什么有很多成功的创业公司，它们的产品所满足的正是其创始人的需求。
-```◾ 与其让许多用户对你若即若离，不如让一些用户爱上你（Better to make a few users love you than a lot ambivalent）
+<br /> <h4>◾ 与其让许多用户对你若即若离，不如让一些用户爱上你（Better to make a few users love you than a lot ambivalent）</h4>
 
 理想情况下，你总希望能让尽可能多的用户都爱上你，但你要明白：这不是一蹴而就的。一开始，你必须在满足部分特定潜在用户的全部需求，和满足全部潜在用户的部分特定需求间做出抉择。我建议你选择前者。提升用户数比提升满意度更简单，而更重要的也许是：欺骗你自己，这更艰难吧。你说自己的产品已达到八成五的满意度，那你怎么知道其实只达到七成，甚至一成呢？与此相比，用户数就好衡量多了。
-```◾ 提供赞不绝口的客服（Offer surprisingly good customer service）
+<br /> <h4>◾ 提供赞不绝口的客服（Offer surprisingly good customer service）</h4>
 
 过去客户都是被粗暴地对待，那时与他们打交道的绝大多数是准垄断企业——这些企业的客服恶劣透顶。你踌躇满志的事业可是会被这些低劣的客服所拖累的。你要提供的不是好的客服，而是赞不绝口的客服。如果你在给满足客户之路上偏离太久，那么他们终有一天会受不了，离你而去。不信，试试看呗？在创业的最早期，为客户提供精细（而因此无法规模化）的客服是值当的，因为这（也）是更懂用户的不二法门。
-```◾ 度量某些因素（You make what you measure）
+<br /> <h4>◾ 度量某些因素（You make what you measure）</h4>
 
 这一点我是从 Joe Kraus 那学到的。如果你总度量某件事，那么你自然就产生了一种奇妙的动机：想要改善它。如果你希望提升用户数，那就在墙上贴一大张纸，每天都在上面标出这项数据。上升，你就开心，下降，自然会失落。不久你就会明白哪些因素有利上升哪些因素导致下降，接下来要做的就是趋利避害了。正因此你要慎思：哪些因素才是最值得度量的。
-```◾ 节俭（Spend little）
+<br /> <h4>◾ 节俭（Spend little）</h4>
 
 关于呼吁创业公司尽可能轻资产运作，我实在想不到还能说什么。绝大多数创业公司在做出用户渴求的产品前就都消亡了——其中最常见的情况就是花光了钱。所以轻资产差不多等同于快速迭代，但意义还不仅如此：就像运动让人们保持年轻，营造轻资产的文化也可助企业保持青春。
-```◾ 能吃上拉面就得了（Get ramen profitable）
+<br /> <h4>◾ 能吃上拉面就得了（Get ramen profitable）</h4>
 
 “吃得起拉面就行”：创业公司赚的钱足够创始人的基本生活开支就够了。这不是什么快捷商业模型（但硬要说是，也算吧），而更像是赢得投资人心意的方法——一旦你进入“有面吃就可的状态”，那么你与投资人的关系就会立刻改变。再说，这也有利于士气。
-```◾ 避免分心（Avoid distractions）
+<br /> <h4>◾ 避免分心（Avoid distractions）</h4>
 
 没有什么比不专注更能杀死创业公司。最要命的几种分心形式往往还都能产生点回报，比如：创业之外朝九晚五的工作、（给别人提供）咨询、有利可图的计划外项目。长远看，你的创业公司也许还有潜力值得挖掘，但要是你总为了料理计划外的人事物而分散心力，那么这就是在干扰你创业。矛盾的是，融资恰恰也是这么一种干扰，所以即便你所做的工作是为了融资，也要尽可能把干扰减到最低。
-```◾ 别陷入士气低落的处境（Don’t get demoralised）
+<br /> <h4>◾ 别陷入士气低落的处境（Don’t get demoralised）</h4>
 
 尽管耗尽资金是创业公司死亡的直接原因，但更深层的原因则是不能集中精力——无论是老板太蠢（可以通过建言献策来弥补）还是员工聪明但士气低落，都会导致这种后果。创业，就意味着要承载相当的道德重量。你需要参悟这点，并不断努力避免被这些重量压垮——如果你弯下膝盖，打算抬起一个很重的箱子，那么请务必小心点。
-```◾ 不要放弃（Don’t give up）
+<br /> <h4>◾ 不要放弃（Don’t give up）</h4>
 
 即便陷入了低落的士气，也不要放弃。只要不放弃，就能前进到意想不到的距离。这在很多方面并不准确，比如：有的人无论坚持努力多久，愣是成为不了好的数学家。但是这对于创业公司是条真理——只要能不断进化思路，那么只要坚持努力，就能成功。
-```◾ 怎样看待交易失败（Deals fall through）
+<br /> <h4>◾ 怎样看待交易失败（Deals fall through）</h4>
 
 我们从 Viaweb 学到的最有用的技能之一：不要太过乐观。那时我们有差不多 20 个不同类型的交易都失败了，在差不多第 10 次的时候，我们终于学会了将交易看作是后台进程——在完结前，忽略它们就行了。如果太过期望交易成功，那么士气就会面临严峻的风险——这不仅仅是因为交易经常会失败，而且太过期望成功，反而会招致更多失败。
 
